# modus-mcp

./: README.md
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/modei/: __init__.py  _http.py  async_client.py  client.py  crypto.py  exceptions.py  realtime.py  types.py
python/src/modei/passport/: __init__.py  agent_id.py  canonical.py  credentials.py  envelope.py  issuer.py  reasons.py  tier.py  verifier.py
python/tests/: conftest.py  test_async_client.py  test_crypto_migration.py  test_sync_client.py
python/tests/passport/: test_canonical.py  test_credentials.py  test_envelope_tier_agent_id.py  test_issuer.py  test_verifier.py
typescript/: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  tsup.config.ts  vitest.config.ts
typescript/__tests__/: canonical.test.ts  staging-roundtrip.test.ts
typescript/__tests__/fixtures/: rfc8785-fixtures.json
typescript/src/: api-client.ts  index.ts  realtime.ts
typescript/src/passport/: canonical.ts  reasons.ts
typescript/tests/: tools.test.ts
